--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -57,4 +57,47 @@ body {
   height: 30px;
   margin-left: 20px;
 }
+
+.input-list {
+  text-align: center;
+  margin-top: 5%;
+}
+
+.input-list .item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.input-list input {
+  color: #fff;
+  font-family: "Indie Flower", cursive;
+  font-size: 28px;
+  background: none;
+  border: none;
+  border-bottom: 2px solid #ffff;
+  cursor: pointer;
+}
+
+.input-list button {
+  cursor: pointer;
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
+  background: none;
+  color: #fff;
+  border: none;
+  margin-left: 10px;
+}
+
+.input-list button:hover {
+  color: #dff9fb;
+  -webkit-transition: ease-in;
+  transition: ease-in;
+}
 /*# sourceMappingURL=style.css.map */
